--- a/Imagenes.html
+++ b/Imagenes.html
@@ -46,5 +46,5 @@
 <button id="der" class="button black right" onclick="derecha()">Derecha</button>
 
 </body>
-<script type="text/javascript" src="JavaScript/ScriptImagenes.js"></script>
+<script src="JavaScript/ScriptImagenes.js"></script>
 </html>
