--- a/Index.html
+++ b/Index.html
@@ -21,36 +21,42 @@
     <label>
         <input id="nombre" onkeyup='listenerNombreApellido()' type="text" value=''>
     </label>
+    <span id="mensajeNombre"></span>
     <br>
     <label>Apellido:</label>
     <br>
     <label>
         <input id="apellido" onkeyup='listenerNombreApellido()' type="text" value=''>
     </label>
+    <span id="mensajeApellido"></span>
     <br>
     <label>Telefono:</label>
     <br>
     <label>
         <input type="text" value='' onkeyup='listenerTelefono()' id="telefono">
     </label>
+    <span id="mensajeTelefono"></span>
     <br>
     <label>Fecha de nacimiento:</label>
     <br>
     <label>
         <input type="text" value='' id="fecha">
     </label>
+    <span id="mensajeFecha"></span>
     <br>
     <label>Email:</label>
     <br>
     <label>
         <input id="email" type="text" value="">
     </label>
+    <span id="mensajeEmail"></span>
     <br>
     <label>Contrasena:</label>
     <br>
     <label>
         <input id="password" type="password" value="">
     </label>
+    <span id="mensajePassowrd"></span>
     <br>
     <input type="submit" id="crear" name="crear" value="Aceptar"/>
     <br>
